--- a/abme.html
+++ b/abme.html
@@ -19,5 +19,6 @@
     <button><a href="abme.html" style="font-size:50px">About Me</a></button>
     <h1 style="font-size:100px;"><center>Welcome to my Info Page!</center></h1>
     <center><img src="bros.jpg" height="750"></center>
+    <center><h1 style="font-size:30px;">I am a sophmore, and I have two brothers, an older and younger. I run cross country and play videogames.</h1></center>
   </body>
 </html>
