Update and rename PLTW 1.1.9.html to Project1.html

--- a/Project1.html
+++ b/Project1.html
@@ -8,7 +8,7 @@
     <body style="background-color: lime;">
     <font color="green">
     <button><a href="index.html" style="font-size:50px">Home</a></button>
-    <button><a href="PLTW 1.1.9.html" style="font-size:50px">1.1.9 Project</a></button>
+    <button><a href="Project1.html" style="font-size:50px">1.1.9 Project</a></button>
     <button><a href="portfolio.html" style="font-size:50px">Portfolio</a></button>
     <button><a href="abme.html" style="font-size:50px">About Me</a></button>
     <h1 style="font-size:100px;"><center>Here's our First project!</center></h1>
