--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,13 @@
 	  <body>
     <body style="background-color: lime;">
     <button><a href="index.html" style="font-size:50px">Home</a></button>
-    <button><a href="PLTW119.html" style="font-size:50px">1.1.9 Project</a></button>
     <button><a href="portfolio.html" style="font-size:50px">Portfolio</a></button>
     <button><a href="abme.html" style="font-size:50px">About Me</a></button>
-    <h1>Under Construction</h1>
-    <img src="construction.jpg" height="250">
+    <h1 style="font-size:100px;"><center>Here's our First project!</center></h1>
+    <center><p style ="font-size:40px">For our project, we made a program that makes you a little ice cream bowl. It asks how many scoops you want, then what flavor you would like each scoop. When youv'e got all your scoops, it aks what sauce you would like on top, and finally asks if you want a cherry.</p></center>
+    <center><img src="icecream.png" height="750"></center>
+    <h1 style="font-size:100px;"><center>Here's our Second project!</center></h1>
+    <center><p style ="font-size:40px">For this project we had to make a game. My group and I made a game that has you practice typing. You get three random words to type, one by one, for each one you type correctly, you get a point. However if you get one wrong, it deducts a point. This is all accompanied by clouds around the word that go up and down with the generation of words.</p></center>
+    <center><img src="icecream.png" height="750"></center>
 	  </body>
 	</html>
