--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,6 @@
     <center><img src="icecream.png" height="750"></center>
     <h1 style="font-size:100px;"><center>Here's our Second project!</center></h1>
     <center><p style ="font-size:40px">For this project we had to make a game. My group and I made a game that has you practice typing. You get three random words to type, one by one, for each one you type correctly, you get a point. However if you get one wrong, it deducts a point. This is all accompanied by clouds around the word that go up and down with the generation of words.</p></center>
-    <center><img src="icecream.png" height="750"></center>
+    <center><img src="wordskies.png" height="750"></center>
 	  </body>
 	</html>
