--- a/portfolio.html
+++ b/portfolio.html
@@ -19,5 +19,6 @@
     <center><p style ="font-size:40px">This wasn't a school project, but it was something I made in my free time, and wanted on my website.</p></center>
     <center><iframe src="https://trinket.io/embed/python/2815db6016" width="75%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe></center>
     <center><h1 style="font-size:100px;">Our Third Project</h1></center>
+     <center><p style ="font-size:40px">For the third project, we had to choose to either make another game or a story animated by the python turtles. My group went with the story and made it about a lonely monster that can either help the townspeople and make friends, or eat the townspeople and be sad and lonely until he dies, depending on user input.</p></center>
 	  </body>
 	</html>
