--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   background-attachment: fixed;
   background-size: 100% 100%;
   }
+  a:link, a:visited {
+    background-color: white;
+    color: black;
+    padding: 15px 150px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family:garamond;
+    font-size:120%;
+  } 
+
+  a:hover, a:active {
+    background-color: #CDCBCD;
+    font-family:garamond;
+  } 
   </style>
     <meta charset="utf-8">
     <title>Home</title>
