--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <font color="green">
-    <button><a href="index.html" style="font-size:50px">Home</a></button>
+    <a href="index.html" style="font-size:50px">Home</a>
     <button><a href="portfolio.html" style="font-size:50px">Portfolio</a></button>
     <button><a href="abme.html" style="font-size:50px">About Me</a></button>
     <h1 style="font-size:100px;"><center>Welcome to my Home Page!</center></h1>
