--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   background-size: 100% 100%;
   }
   a:link, a:visited {
-    background-color: white;
-    color: black;
+    background-color: #00D129;
+    color: Green;
     padding: 15px 150px;
     text-align: center;
     text-decoration: none;
@@ -20,7 +20,7 @@
   } 
 
   a:hover, a:active {
-    background-color: #CDCBCD;
+    background-color: #00AD22;
     font-family:garamond;
   } 
   </style>
@@ -29,9 +29,11 @@
   </head>
   <body>
     <font color="green">
+    <center>
     <a href="index.html" style="font-size:50px">Home</a>
-    <button><a href="portfolio.html" style="font-size:50px">Portfolio</a></button>
-    <button><a href="abme.html" style="font-size:50px">About Me</a></button>
+    <a href="portfolio.html" style="font-size:50px">Portfolio</a>
+    <a href="abme.html" style="font-size:50px">About Me</a>
+    </center>
     <h1 style="font-size:100px;"><center>Welcome to my Home Page!</center></h1>
     <center><img src="house.jpg" height="750"></center>
     <figure>
