--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-family:garamond;
+    font-family: "Comic Sans";
     font-size:120%;
   } 
 
   a:hover, a:active {
     background-color: #00AD22;
-    font-family:garamond;
+    font-family: "Comic Sans";
   } 
   </style>
     <meta charset="utf-8">
