--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   background-size: 100% 100%;
   }
   a:link, a:visited {
-    background-color: #00D129;
+    background-color: #00E334;
     color: Green;
     padding: 15px 150px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-family: "Comic Sans";
+    font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
     font-size:120%;
   } 
 
   a:hover, a:active {
     background-color: #00AD22;
-    font-family: "Comic Sans";
+    font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
   } 
   </style>
     <meta charset="utf-8">
