--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   background-size: 100% 100%;
   }
   a:link, a:visited {
-    background-color: #00E334;
+    background-color: #00C927;
     color: Green;
     padding: 15px 150px;
     text-align: center;
