--- a/abme.html
+++ b/abme.html
@@ -1,5 +1,20 @@
 <!doctype html>
 <html lang="en">
+  a:link, a:visited {
+    background-color: #00C927;
+    color: Green;
+    padding: 15px 150px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
+    font-size:120%;
+  } 
+
+  a:hover, a:active {
+    background-color: #00AD22;
+    font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
+  }
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
@@ -7,9 +22,11 @@
   <body>
   <body style="background-color: lime;">
     <font color="green">
-    <button><a href="index.html" style="font-size:50px">Home</a></button>
-    <button><a href="portfolio.html" style="font-size:50px">Portfolio</a></button>
-    <button><a href="abme.html" style="font-size:50px">About Me</a></button>
+    <center>
+    <a href="index.html" style="font-size:50px">Home</a>
+    <a href="portfolio.html" style="font-size:50px">Portfolio</a>
+    <a href="abme.html" style="font-size:50px">About Me</a>
+    </center>
     <h1 style="font-size:100px;"><center>Welcome to my Info Page!</center></h1>
     <center><img src="bros.jpg" height="750"></center>
     <center><p style="font-size:50px">I am a sophmore, and I have two brothers, a younger and an older. I enjoy running cross country and playing videogames.</p></center>
