--- a/abme.html
+++ b/abme.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="en">
-  a:link, a:visited {
+  <head>
+    <meta charset="utf-8">
+    <title>About Me</title>
+  </head>
+  <body>
+  <style>
+    a:link, a:visited {
     background-color: #00C927;
     color: Green;
     padding: 15px 150px;
@@ -15,11 +21,7 @@
     background-color: #00AD22;
     font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
   }
-  <head>
-    <meta charset="utf-8">
-    <title>About Me</title>
-  </head>
-  <body>
+  </style>
   <body style="background-color: lime;">
     <font color="green">
     <center>
