--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,33 @@
 <!doctype html>
 	<html lang="en">
 	  <head>
+            <style>
+    a:link, a:visited {
+    background-color: #00C827;
+    color: Green;
+    padding: 15px 150px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
+    font-size:120%;
+  } 
+
+  a:hover, a:active {
+    background-color: #00AD22;
+    font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
+  }
+  </style>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
 	  </head>
 	  <body>
     <body style="background-color: lime;">
-    <button><a href="index.html" style="font-size:50px">Home</a></button>
-    <button><a href="portfolio.html" style="font-size:50px">Portfolio</a></button>
-    <button><a href="abme.html" style="font-size:50px">About Me</a></button>
+	    <center>
+    <a href="index.html" style="font-size:50px">Home</a>
+    <a href="portfolio.html" style="font-size:50px">Portfolio</a>
+    <a href="abme.html" style="font-size:50px">About Me</a>
+	    </center>
     <h1 style="font-size:100px;"><center>Here's our First project!</center></h1>
     <center><p style ="font-size:40px">For our project, we made a program that makes you a little ice cream bowl. It asks how many scoops you want, then what flavor you would like each scoop. When youv'e got all your scoops, it aks what sauce you would like on top, and finally asks if you want a cherry.</p></center>
     <center><iframe src="https://trinket.io/embed/python/19e3a8510b" width="75%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe></center>
