--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     background-color: #00AD22;
     font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
   } 
+  
+  img {
+    border: 5px #00C827;
+  }
   </style>
     <meta charset="utf-8">
     <title>Home</title>
