--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
   a:hover, a:active {
     background-color: #00AD22;
     font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
-  } 
-  
-  img {
-    border: 5px #00C827;
-  }
+    }
   </style>
     <meta charset="utf-8">
     <title>Home</title>
   </head>
   <body>
+      } 
+  img {
+    border: 5px solid green;
+  }
     <font color="green">
     <center>
     <a href="index.html" style="font-size:50px">Home</a>
