--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     <title>Home</title>
   </head>
   <body>
+    <style>
       } 
   img {
     border: 5px solid green;
   }
+      </style>
     <font color="green">
     <center>
     <a href="index.html" style="font-size:50px">Home</a>
