--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
   <style>
+    * { cursor: url(cursor1.cur), default; }
+    a { cursor: url(cursor2.cur), default; }
   body {
   background-image: url('https://thumbs.gfycat.com/ConcretePoliticalBichonfrise-max-1mb.gif');
   background-repeat: no-repeat;
