--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
   <style>
-    * { cursor: url(cursor1.cur), default; }
+    * { cursor: url(cursor4.cur) 0 0, default; }
     a { cursor: url(cursor3.cur), default; }
   body {
   background-image: url('https://thumbs.gfycat.com/ConcretePoliticalBichonfrise-max-1mb.gif');
