--- a/abme.html
+++ b/abme.html
@@ -22,6 +22,11 @@
     <title>About Me</title>
   </head>
   <body>
+        <style>
+  img {
+    border: 8px solid green;
+  }
+      </style>
   <body style="background-color: lime;">
     <font color="green">
     <center>
