--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <a href="abme.html" style="font-size:50px">About Me</a>
     </center>
     <h1 style="font-size:100px;"><center>Welcome to my Home Page!</center></h1>
-    <center><img src="house.jpg" height="750"></center>
+    <center><img src="home.jpg" height="750"></center>
     <figure>
      <figcaption><center>Some Jams</center></figcaption>
      <center><audio src="nggyu.mp3" controls></center></audio>
