--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <style>
     * { cursor: url(cursor4.cur) 0 0, default; }
-    a { cursor: url(cursor3.cur) 0 29 default; }
+    a { cursor: url(cursor3.cur), default; }
     figure { cursor: url(cursor3.cur) 0 29 default; }
   body {
   background-image: url('https://thumbs.gfycat.com/ConcretePoliticalBichonfrise-max-1mb.gif');
