--- a/abme.html
+++ b/abme.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    * { cursor: url(cursor4.cur) 0 0, default; }
+    a { cursor: url(cursor3.cur), default; }
+    figure { cursor: url(cursor3.cur) 0 29 default; }
     <style>
     a:link, a:visited {
     background-color: #00C827;
