--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,9 @@
 	<html lang="en">
 	  <head>
             <style>
+    * { cursor: url(cursor4.cur) 0 0, default; }
+    a { cursor: url(cursor3.cur), default; }
+    figure { cursor: url(cursor3.cur) 0 29 default; }
     a:link, a:visited {
     background-color: #00C827;
     color: Green;
