--- a/portfolio.html
+++ b/portfolio.html
@@ -31,17 +31,20 @@
     <a href="portfolio.html" style="font-size:50px">Portfolio</a>
     <a href="abme.html" style="font-size:50px">About Me</a>
 	    </center>
-    <h1 style="font-size:100px;"><center>Here's our First project!</center></h1>
-    <center><p style ="font-size:40px">For our project, we made a program that makes you a little ice cream bowl. It asks how many scoops you want, then what flavor you would like each scoop. When youv'e got all your scoops, it aks what sauce you would like on top, and finally asks if you want a cherry.</p></center>
-    <center><iframe src="https://trinket.io/embed/python/19e3a8510b" width="75%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe></center>
-    <h1 style="font-size:100px;"><center>Here's our Second project!</center></h1>
-    <center><p style ="font-size:40px">For this project we had to make a game. My group and I made a game that has you practice typing. You get three random words to type, one by one, for each one you type correctly, you get a point. However if you get one wrong, it deducts a point. This is all accompanied by clouds around the word that go up and down with the generation of words.</p></center>
-    <center><iframe src="https://trinket.io/embed/python/458ac32a9b" width="75%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe></center>
-    <h1 style="font-size:100px;"><center>Blackjack</center></h1>
-    <center><p style ="font-size:40px">This wasn't a school project, but it was something I made in my free time, and wanted on my website.</p></center>
-    <center><iframe src="https://trinket.io/embed/python/2815db6016" width="75%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe></center>
-    <center><h1 style="font-size:100px;">Our Third Project</h1></center>
-    <center><p style ="font-size:40px">For the third project, we had to choose to either make another game or a story animated by the python turtles. My group went with the story and made it about a lonely monster that can either help the townspeople and make friends, or eat the townspeople and be sad and lonely until he dies, depending on user input.</p></center>
-    <center><iframe width="75%" height="800" src="https://www.youtube-nocookie.com/embed/PxbFgnoUklo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-	  </body>
+   	    <h1 style="font-size:100px;"><center>Here's our First project!</center></h1>
+   	    <center><p style ="font-size:40px">For our project, we made a program that makes you a little ice cream bowl. It asks how many scoops you want, then what flavor you would like each scoop. When youv'e got all your scoops, it aks what sauce you would like on top, and finally asks if you want a cherry.</p></center>
+    	    <center><iframe src="https://trinket.io/embed/python/19e3a8510b" width="75%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe></center>
+    	    <h1 style="font-size:100px;"><center>Here's our Second project!</center></h1>
+    	    <center><p style ="font-size:40px">For this project we had to make a game. My group and I made a game that has you practice typing. You get three random words to type, one by one, for each one you type correctly, you get a point. However if you get one wrong, it deducts a point. This is all accompanied by clouds around the word that go up and down with the generation of words.</p></center>
+            <center><iframe src="https://trinket.io/embed/python/458ac32a9b" width="75%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe></center>
+	    <h1 style="font-size:100px;"><center>Blackjack</center></h1>
+	    <center><p style ="font-size:40px">This wasn't a school project, but it was something I made in my free time, and wanted on my website.</p></center>
+    	    <center><iframe src="https://trinket.io/embed/python/2815db6016" width="75%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe></center>
+    	    <center><h1 style="font-size:100px;">Our Third Project</h1></center>
+    	    <center><p style ="font-size:40px">For the third project, we had to choose to either make another game or a story animated by the python turtles. My group went with the story and made it about a lonely monster that can either help the townspeople and make friends, or eat the townspeople and be sad and lonely until he dies, depending on user input.</p></center>
+	    <center><iframe width="75%" height="800" src="https://www.youtube-nocookie.com/embed/PxbFgnoUklo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+	    <center><h1 style="font-size:100px;">Scratch Project</h1></center>
+	    <center><p style ="font-size:40px">For our third project, we had to make something on Scratch. We decided to make a platformer game titled "Parkour". You controll the character who jumps and runs his way through each level to the flag, avoiding the red obstacles. There are 10 total levels.</p></center>
+	    <center><iframe src="https://scratch.mit.edu/projects/522581035/embed" allowtransparency="true" width="75%" height="600" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
+           </body>
 	</html>
