--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,8 @@
 	    <center><h1 style="font-size:100px;">Scratch Project</h1></center>
 	    <center><p style ="font-size:40px">For our third project, we had to make something on Scratch. We decided to make a platformer game titled "Parkour". You controll the character who jumps and runs his way through each level to the flag, avoiding the red obstacles. There are 10 total levels.</p></center>
 	    <center><iframe src="https://scratch.mit.edu/projects/522581035/embed" allowtransparency="true" width="50%" height="600" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
-           <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTvb7Ogvj5ZZsnegkQvzgzObAg0p_reblHgYaaDzmDbQOYR_Uc_BVii_-NxmrtQ5hpJxjAbajfMBRrv/embed?start=false&loop=false&delayms=5000" frameborder="0" width="50%" height="600" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+	    <center><h1 style="font-size:100px;">Scratch Project</h1></center>
+	    <center><p style ="font-size:40px">For the final projet of the year, we focused on simulations. Our group analyzed a model of Hotelling's law, which focuses on the relationship of cost and distance to different stores driving competition between businesses with similiar products.</p></center>
+            <center><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTvb7Ogvj5ZZsnegkQvzgzObAg0p_reblHgYaaDzmDbQOYR_Uc_BVii_-NxmrtQ5hpJxjAbajfMBRrv/embed?start=false&loop=false&delayms=5000" frameborder="0" width="50%" height="600" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></center>
 		</body>
 	</html>
