--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   a:link, a:visited {
     background-color: #00C827;
     color: Green;
-    padding: 15px 150px;
+    padding: 15px 25%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
