--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width">
+    <style>
+img {
+    max-width: 100%;
+}
+</style>
   <style>
     * { cursor: url(cursor4.cur) 0 0, default; }
     a { cursor: url(cursor3.cur), default; }
