--- a/abme.html
+++ b/abme.html
@@ -9,7 +9,7 @@
     a:link, a:visited {
     background-color: #00C827;
     color: Green;
-    padding: 15px 150px;
+    padding: 15px 5%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
